Implement part functions, make system serializable